# abt

./: .env.dist  .gitignore  Dockerfile  README.md  deta.json  main.py  pyproject.toml  requirements.txt
src/: __main__.py
src/static/: setup.html
src/tg/: __main__.py  factory.py  route.py  service.py
src/util/: config.py  container.py  service.py  txt.py
src/web/: app.py  route.py  service.py
